--- a/style.css
+++ b/style.css
@@ -17,13 +17,16 @@ input {
   margin-right: .5%;
 }
 #name-div, #welcome {
-  background: #AAA;
+  background-color:rgba(85,128,163,.7);
   padding: 10px;
   width: 100%;
 }
 #input-div {
-  background: #000;
-  padding: 3px;
+  background-color:transparent;
+  padding-right:15px;
+  padding-left:15px;
+  padding-bottom:7px;
+
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -37,7 +40,7 @@ input {
   padding: 5px 10px;
 }
 #messages li:nth-child(odd) {
-  background: #eee;
+  background: rgb(245,245,245);;
 }
 .scrollbar {
   overflow-y: auto;
@@ -61,10 +64,13 @@ input {
 textarea {
   min-height: 7px; /* (min-height au lieu de height) Pour empêcher de resize plus petit que la taille initale du textarea */
   resize: vertical;
+  border-top:0px !important;
+  border-bottom:0px !important;
+  border-left:0px !important;
 }
 #toast1 {
   position: absolute;
-  top: 5rem;
+  top: 8rem;
   right: 2.5rem;
   width: 260px;
   min-height: 100px;
@@ -94,7 +100,7 @@ hr.style-two {
   margin-top:12px;
   margin-bottom:12px;
 }
-#nbconnectes{
+#count{
   font-size:13px;
   border-radius:50px;
   padding-left:5px;
@@ -160,3 +166,37 @@ hr.style-two {
 #bmodaleusers:hover{
   color:rgb(255, 165, 0);
 } 
+#bName{
+  background-color:rgb(230,230,230);
+  color:rgb(90,90,90);
+  border:0px;
+  padding:6.5px 10px;
+}
+#bName:hover{
+  background-color:rgb(220,220,220);
+}
+#divdubas{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  border-radius:4px;
+}
+#eltG{
+  color:rgb(110,110,110);
+  border:0px;
+}
+#bH{
+  color:rgb(90,90,90);
+  border-top:0px;
+  border-right:0px;
+  border-bottom:0px;
+}
+#name{
+  border-top-left-radius:0px;
+  border-bottom-left-radius:0px;
+}
+#welcome{
+  color:rgb(50,50,50);
+  letter-spacing: .5px;
+}
+#arrow{
+  filter: drop-shadow(3px 3px 2px rgba(0,0,0,.3));
+}
