--- a/style.css
+++ b/style.css
@@ -200,3 +200,24 @@ hr.style-two {
 #arrow{
   filter: drop-shadow(3px 3px 2px rgba(0,0,0,.3));
 }
+#name-div > div  div{
+  width:100%;
+  margin:0px;
+}
+#name-div > div:nth-child(4){
+  padding-left:0px;
+}
+#name-div > div:nth-child(3){
+  padding-right:0px;
+}
+@media screen and (max-width: 750px) {
+  #name-div > div{
+    padding-top:15px;
+    display: flex;
+    justify-content: center;
+    width:100%;
+  }
+  #name-div > div:nth-child(3){
+    padding-right:15px;
+  }
+}
