--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ hr.style-two {
   color:rgb(90,90,90);
   border:0px;
   padding:6.5px 10px;
+  width:70%;
 }
 #bName:hover{
   background-color:rgb(220,220,220);
@@ -200,15 +201,12 @@ hr.style-two {
 #arrow{
   filter: drop-shadow(3px 3px 2px rgba(0,0,0,.3));
 }
-#name-div > div  div{
+#name-div > div > div{
   width:100%;
   margin:0px;
 }
-#name-div > div:nth-child(4){
-  padding-left:0px;
-}
-#name-div > div:nth-child(3){
-  padding-right:0px;
+#name-div{
+  margin:0px;
 }
 @media screen and (max-width: 750px) {
   #name-div > div{
@@ -217,7 +215,10 @@ hr.style-two {
     justify-content: center;
     width:100%;
   }
-  #name-div > div:nth-child(3){
-    padding-right:15px;
+  #name-div > div:nth-child(4){
+    padding-right:0px;
+  }
+  #bName{
+    width:50px;
   }
 }
