--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ textarea {
 }
 #toast1 {
   position: absolute;
-  top: 8rem;
+  top: 6rem;
   right: 2.5rem;
   width: 260px;
   min-height: 100px;
@@ -205,20 +205,45 @@ hr.style-two {
   width:100%;
   margin:0px;
 }
+#name-div > div:nth-child(3){
+  padding-right:0px;
+}
+#name-div > div:nth-child(4){
+  padding-left:0px;
+}
 #name-div{
   margin:0px;
 }
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 768px) {
   #name-div > div{
     padding-top:15px;
     display: flex;
     justify-content: center;
     width:100%;
   }
-  #name-div > div:nth-child(4){
-    padding-right:0px;
-  }
   #bName{
     width:50px;
   }
+  #name-div > div:nth-child(3){
+    padding-right:15px;
+  }
+  #name-div > div:nth-child(4){
+    padding-left:15px;
+  }
+}
+
+/* Désactiver les flèches dans les input number */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.btn:focus, .close:focus{
+  outline: none !important;
+  box-shadow: none;
 }
