--- a/style.css
+++ b/style.css
@@ -247,3 +247,12 @@ input[type=number] {
   outline: none !important;
   box-shadow: none;
 }
+#loading{
+  position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url("./loading.gif") center no-repeat #fff;
+}
