--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
 }
 a {-webkit-writing-mode: vertical-lr; vertical-align:middle;} //ceci fix un glyphicon verticallement
 body {
-  font: 13px Helvetica, Arial;
-  margin: 0; 
-  height: 100%;
-  overflow: hidden;
+  font:13px Helvetica, Arial;
+  margin:0; 
+  height:100%;
+  overflow:hidden;
 }
 input {
-  border: 0;
-  padding: 10px;
-  width: 100%;
-  margin-right: .5%;
+  border:0;
+  padding:10px;
+  width:100%;
+  margin-right:.5%;
 }
 #name-div, #welcome {
-  background-color:rgba(85,128,163,.7);
-  padding: 10px;
-  width: 100%;
+  background-color:#5580a3b3;
+  padding:10px;
+  width:100%;
 }
 #input-div {
   background-color:transparent;
@@ -27,76 +27,76 @@ input {
   padding-left:15px;
   padding-bottom:7px;
 
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  position:fixed;
+  bottom:0;
+  width:100%;
 }
 #messages {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  list-style-type:none;
+  margin:0;
+  padding:0;
 }
 #messages li {
-  padding: 5px 10px;
+  padding:5px 10px;
 }
 #messages li:nth-child(odd) {
-  background: rgb(245,245,245);;
+  background:#f5f5f5;
 }
 .scrollbar {
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow-y:auto;
+  overflow-x:hidden;
 }
 .modal-body {
-    position: relative; /* This avoids whatever it's absolute inside of it to go off the container */
-    height: 450px; /* let's imagine that your login box height is 250px . This height needs to be added, otherwise .img-responsive will be like "Oh no, I need to be vertically aligned?! but from which value I need to be aligned??" */
+    position:relative; /* This avoids whatever it's absolute inside of it to go off the container */
+    height:450px; /* let's imagine that your login box height is 250px . This height needs to be added, otherwise .img-responsive will be like "Oh no, I need to be vertically aligned?! but from which value I need to be aligned??" */
 }
 .img-responsive {
     width: 50%; /* This value will depend on what size you want for your loading image, let's say it's 50px */
- /*   height: 50%; */
+ /*   height:50%; */
     position: absolute;
-    left: 25%;
-    top: 20%;
+    left:25%;
+    top:20%;
 }
 .popover {
-  max-width: 350px;
-  min-width: 250px;
+  max-width:350px;
+  min-width:250px;
 }
 textarea {
-  min-height: 7px; /* (min-height au lieu de height) Pour empêcher de resize plus petit que la taille initale du textarea */
-  resize: vertical;
+  min-height:7px; /* (min-height au lieu de height) Pour empêcher de resize plus petit que la taille initale du textarea */
+  resize:vertical;
   border-top:0px !important;
   border-bottom:0px !important;
   border-left:0px !important;
 }
 #toast1 {
   position: absolute;
-  top: 6rem;
-  right: 2.5rem;
-  width: 260px;
-  min-height: 100px;
-  background: radial-gradient(circle at center, rgba(255,255,255,.9), rgba(255,255,255,.8));
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-  border: 5px solid rgba(0,0,0,.01);
-  border-radius: 6px;
+  top:6rem;
+  right:2.5rem;
+  width:260px;
+  min-height:100px;
+  background:radial-gradient(circle at center, #ffffffe6, #ffffffcc);
+  box-shadow:0 4px 8px 0 #0000001a, 0 6px 20px 0 #0000001a;
+  border:5px solid #00000003;
+  border-radius:6px;
 }
 #closeToast:hover > span{
-  color:rgb(50,50,50) !important;
+  color:#323232 !important;
 }
 #closeToast{
   padding:5px;
   padding-right:7px;
-  color:rgb(80,80,80) !important;
+  color:#505050 !important;
 }
 .toast-header{
   border:none;
 }
 .toast-body{
-  color:rgb(70,70,70);
+  color:#464646;
 }
 hr.style-two {
-  border: 0;
-  height: 0.1px;
-  background-image: linear-gradient(to right,rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.1));
+  border:0;
+  height:0.1px;
+  background-image:linear-gradient(to right,#0000001a, #000000b3,#0000001a);
   margin-top:12px;
   margin-bottom:12px;
 }
@@ -110,44 +110,44 @@ hr.style-two {
 }
 #usagersconnectes{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  letter-spacing: .7px;
-  font-weight: 700;
+  letter-spacing:.7px;
+  font-weight:700;
 }
 #firstline{
   font-size:13px;
-  text-transform: uppercase;
+  text-transform:uppercase;
 }
 .listeusagers li{
-  text-align: center;
-  list-style: none;
-  margin-bottom: 4px;
-  font-size: 13px;
+  text-align:center;
+  list-style:none;
+  margin-bottom:4px;
+  font-size:13px;
 }
 .listeusagers{
-  padding-bottom: 5px;
+  padding-bottom:5px;
 }
 .container-fluid{
   padding:0px !important;
 }
 #iconuser{
-  margin-top: 2px;
-  filter: drop-shadow(3px 3px 2px rgba(0,0,0,.1));
-  font-size: 15px;
-  color: rgb(249, 249, 249);
+  margin-top:2px;
+  filter: drop-shadow(3px 3px 2px #0000001a);
+  font-size:15px;
+  color:#f9f9f9;
 }
 .divIconeModale {
   position: absolute;
-  top: 7px;
-  left: -25px;
-  background: radial-gradient(circle at center, rgba(236, 102, 0, 1), rgb(203, 92, 11));
-  border-top-left-radius: 3px;
-  padding-right: 11px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 11px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
-  z-index: 2;
-  opacity: 98%;
+  top:7px;
+  left:-25px;
+  background: radial-gradient(circle at center, #ec6600, #cb5c0b);
+  border-top-left-radius:3px;
+  padding-right:11px;
+  padding-top:8px;
+  padding-bottom:8px;
+  padding-left:11px;
+  box-shadow: 5px 5px 5px #0000001a;
+  z-index:2;
+  opacity:98%;
 }
 #ticket {
   width: 0;
@@ -155,37 +155,37 @@ hr.style-two {
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
   border-right: 20px solid #7C4204;
-  left: -25px;
+  left:-25px;
   top: 35px;
-  position: absolute;
+  position:absolute;
 }
 #bmodaleusers{
-  color:rgb(80,80,80);
+  color:#505050;
   cursor:pointer;
 }
 #bmodaleusers:hover{
-  color:rgb(255, 165, 0);
+  color:#ffa500;
 } 
 #bName{
-  background-color:rgb(230,230,230);
-  color:rgb(90,90,90);
+  background-color:#e6e6e6;
+  color:#5a5a5a;
   border:0px;
   padding:6.5px 10px;
   width:70%;
 }
 #bName:hover{
-  background-color:rgb(220,220,220);
+  background-color:#dcdcdc;
 }
 #divdubas{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 #00000033, 0 6px 20px 0 #00000033;
   border-radius:4px;
 }
 #eltG{
-  color:rgb(110,110,110);
+  color:#6e6e6e;
   border:0px;
 }
 #bH{
-  color:rgb(90,90,90);
+  color:#5a5a5a;
   border-top:0px;
   border-right:0px;
   border-bottom:0px;
@@ -195,11 +195,11 @@ hr.style-two {
   border-bottom-left-radius:0px;
 }
 #welcome{
-  color:rgb(50,50,50);
-  letter-spacing: .5px;
+  color:#323232;
+  letter-spacing:.5px;
 }
 #arrow{
-  filter: drop-shadow(3px 3px 2px rgba(0,0,0,.3));
+  filter: drop-shadow(3px 3px 2px #0000004d);
 }
 #name-div > div > div{
   width:100%;
@@ -217,8 +217,8 @@ hr.style-two {
 @media screen and (max-width: 768px) {
   #name-div > div{
     padding-top:15px;
-    display: flex;
-    justify-content: center;
+    display:flex;
+    justify-content:center;
     width:100%;
   }
   #bName{
@@ -235,24 +235,24 @@ hr.style-two {
 /* Désactiver les flèches dans les input number */
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+  -webkit-appearance:none;
   margin: 0;
 }
 /* Firefox */
 input[type=number] {
-  -moz-appearance: textfield;
+  -moz-appearance:textfield;
 }
 
 .btn:focus, .close:focus{
-  outline: none !important;
-  box-shadow: none;
+  outline:none !important;
+  box-shadow:none;
 }
 #loading{
-  position: fixed;
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 9999;
-	background: url("./loading.gif") center no-repeat #fff;
+  position:fixed;
+	left:0px;
+	top:0px;
+	width:100%;
+	height:100%;
+	z-index:9999;
+	background:url("./loading.gif") center no-repeat #fff;
 }
