--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ textarea {
 #closeToast{
   padding:5px;
   padding-right:7px;
-  color:#505050 !important;
+  color:#3d3d3d !important;
 }
 .toast-header{
   border:none;
@@ -117,13 +117,13 @@ hr.style-two {
   font-size:13px;
   text-transform:uppercase;
 }
-.listeusagers li{
+#users li{
   text-align:center;
   list-style:none;
   margin-bottom:4px;
   font-size:13px;
 }
-.listeusagers{
+#users{
   padding-bottom:5px;
 }
 .container-fluid{
