--- a/style.css
+++ b/style.css
@@ -237,23 +237,6 @@ hr.style-two {
 #name-div{
   margin:0px;
 }
-@media screen and (max-width: 768px) {
-  #name-div > div{
-    padding-top:15px;
-    display:flex;
-    justify-content:center;
-    width:100%;
-  }
-  #bName{
-    width:50px;
-  }
-  #name-div > div:nth-child(3){
-    padding-right:15px;
-  }
-  #name-div > div:nth-child(4){
-    padding-left:15px;
-  }
-}
 
 /* Désactiver les flèches dans les input number */
 /* Chrome, Safari, Edge, Opera */
@@ -389,6 +372,38 @@ code{
   border-radius:50px;
 }
 
+#divTwoInputs{
+  padding-right:0px;
+}
+#divTwoInputs > div{
+  display:flex;
+}
+#divTwoInputs > div > div{
+  flex:auto;
+}
+#divTwoInputs > div > div:nth-child(1){
+  padding-left:0px;
+  padding-right:15px;
+}
+#divTwoInputs > div > div:nth-child(2){
+  padding-right:0px;
+  padding-left:15px;
+}
+
+@media screen and (max-width: 768px) {
+  #name-div > div{
+    padding-top:15px;
+    display:flex;
+    justify-content:center;
+    width:100%;
+  }
+  #bName{
+    width:50px;
+  }
+  #divTwoInputs{
+    padding-right:15px;
+  }
+}
 #loading{
   position:fixed;
   left:0px;
