--- a/style.css
+++ b/style.css
@@ -348,12 +348,12 @@ code{
 }
 
 /* Scrollbar textarea */
-*::-webkit-scrollbar { width:5px; }
-*::-webkit-scrollbar-track {
+textarea::-webkit-scrollbar { width:5px; }
+textarea::-webkit-scrollbar-track {
   background-color:#ffffff;
   border-radius:0px;
 }
-*::-webkit-scrollbar-thumb {
+textarea::-webkit-scrollbar-thumb {
   background-color:#b2c0cc;
   border-radius:0px;
 }
