--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ input {
   padding:10px;
   width:100%;
 }
+#welcome {
+  padding:7px 10px;
+}
 #input-div {
   background-color:transparent;
   padding-right:15px;
@@ -29,13 +32,6 @@ input {
   position:fixed;
   bottom:0;
   width:100%;
-}
-@media screen and (max-width: 768px) {
-  #input-div {
-    padding-right:5px;
-    padding-left:5px;
-    padding-bottom:5px;
-  }
 }
 #messages {
   list-style-type:none;
@@ -281,18 +277,6 @@ input:focus{
   display: flex;
   align-items: center;
 }
-@media screen and (max-width:400px) {
-  #welcome{
-    display: flex;
-    flex-direction: column;
-  }
-  #divWelcome{
-    padding-bottom:10px;
-  }
-  #divRoom{
-    margin:0px;
-  }
-}
 code{
   color:#5c7183;
   background-color:#f3f3f3;
@@ -389,8 +373,59 @@ textarea::-webkit-scrollbar-thumb {
   padding-right:0px;
   padding-left:15px;
 }
+#divGif, #divMsgDeco{
+  background-color:#e6e6e6;
+  box-shadow:0 5px 11px 0 #0000002e, 0 4px 15px 0 #00000026;
+  width:35px;
+  height:30px;
+  text-align:center;
+  margin-left:20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius:30px;
+  border-radius:1px;
+}
+#divMsgDeco{
+  width:100px;
+}
+#divGif > img{
+  border-radius: 50%;
+  flex:center;
+}
+#divMsgDeco > span{
+  color:#fb2d47;
+  font-size:10px;
+  text-transform:uppercase;
+  font-weight:600;
+  margin-top:2px;
+}
+#divPrev{
+  margin-left:auto;
+  display:flex;
+}
 
+@media screen and (max-width:400px) {
+  #welcome{
+    display:flex;
+    flex-direction:column;
+  }
+  #divWelcome{
+    padding-bottom:10px;
+  }
+  #divRoom{
+    margin:0px;
+  }
+  #divPrev{
+    margin-left:0px;
+  }
+}
 @media screen and (max-width: 768px) {
+  #input-div {
+    padding-right:5px;
+    padding-left:5px;
+    padding-bottom:5px;
+  }
   #name-div > div{
     padding-top:15px;
     display:flex;
