--- a/wsc.css
+++ b/wsc.css
@@ -399,16 +399,25 @@ textarea::-webkit-scrollbar-thumb {
 #listeIcons > span{
   cursor:pointer;
 }
-
 #lslider{
   color :#646464;
   display:block;
+  margin:0px;
 }
-.slider-handle {
+.slider-handle{
   background-color:#5e8ead !important;
   background-image:none !important;
 }
-
+.slider.slider-horizontal {
+  width: 150px;
+}
+#divSlider{
+  border-radius:10px;
+  border:5px solid #f8f8f8cc;
+  display: inline-block;
+  padding:0px 20px;
+  margin:0px;
+}
 @media screen and (max-width:768px) {
   #bstart, #bstop{ margin-right:0px; }
   #divAudio{
