--- a/wsc.css
+++ b/wsc.css
@@ -377,23 +377,23 @@ textarea::-webkit-scrollbar-thumb {
   padding:0px 10px;
 }
 #image{
-  width:90%;
-  height:90%;
+  width:100%;
+  height:100%;
 }
 #video{
   display:none;
 }
 .normalSize{
   margin:10px auto !important;
-  height:48%;
-  width:43%;
+  min-width:37%;
+  min-height:42%;
 }
 #divkbytes{
   color:rgb(199, 199, 199);
   position:absolute;
   font-size:11px;
-  margin-top:-10px;
-  margin-left:-10px;
+  margin-top:-12px;
+  margin-left:-12px;
 }
 @keyframes dots {
   0%, 20% { color:#5c7183; }
@@ -418,11 +418,23 @@ textarea::-webkit-scrollbar-thumb {
   border-radius:10px;
   border:5px solid #f8f8f8cc;
   display:inline-block;
-  padding:0px 20px;
+  padding:3px 10px;
+  margin:0px;
+}
+#divResizeWindow{
+  border:0px;
+  padding:0px;
+}
+#sliderEmetteur > div > label{
+  color :#646464;
+  display:block;
   margin:0px;
 }
 #bShare{
-  margin-top:15px;
+  margin:35px 0px;
+}
+#sliderEmetteur, #sliderReceveur{
+  margin-bottom:10px;
 }
 #bdeconnexion{
   border:0px;
