--- a/wsc.css
+++ b/wsc.css
@@ -320,14 +320,14 @@ textarea::-webkit-scrollbar-thumb {
   display:flex;
   padding-left:0px;
 }
-#bstart, #bstop, #bmuteRecord, #bmuteAudio, #bshareScreen{
+#bstart, #bstop, #bmuteRecord, #bmuteAudio, #bshareScreen, #bFull, #bExitFull{
   border:0px;
   background-color:#e7e7e7;
   color:#5c7183;
   border-radius:3px;
   box-shadow:0 5px 11px 0 #0000002e, 0 4px 15px 0 #00000026;
 }
-#bstart:hover, #bstop:hover, #bmuteRecord:hover, #bmuteAudio:hover, #bshareScreen:hover{
+#bstart:hover, #bstop:hover, #bmuteRecord:hover, #bmuteAudio:hover, #bshareScreen:hover, #bFull:hover{
   background-color:#5c7183;
   color:#e7e7e7;
 }
@@ -377,8 +377,8 @@ textarea::-webkit-scrollbar-thumb {
   padding:0px 10px;
 }
 #image{
-  width:100%;
-  height:100%;
+  max-width:100%;
+  max-height:100%;
 }
 #video{
   display:none;
@@ -457,6 +457,32 @@ textarea::-webkit-scrollbar-thumb {
 }
 #bdeconnexion:hover{
   opacity:100%;
+}
+#bFull{
+  margin-right:15px;
+  box-shadow:0 3px 5px 0 #0000002e, 0 2px 6px 0 #00000026;
+}
+.modal-full {
+  min-width:100%;
+  min-height:100%;
+  margin:0;
+  margin:auto !important;
+}
+.modal-full .modal-content {
+  min-height:100vh;
+  border-radius:0px;
+}
+#bExitFull{
+  background-color:#5c7183;
+  color:#e7e7e7;
+  position:absolute;
+  left:20px;
+  top:20px;
+}
+
+#bExitFull:hover{
+  background-color:#6a8399;
+  color:#e7e7e7;
 }
 @media screen and (max-width:768px) {
   #bstart, #bstop{ margin-right:0px; }
