--- a/wsc.css
+++ b/wsc.css
@@ -377,8 +377,8 @@ textarea::-webkit-scrollbar-thumb {
   padding:0px 10px;
 }
 #image{
-  max-width:100%;
-  max-height:100%;
+  width:100%;
+  height:100%;
 }
 #video{
   display:none;
