--- a/wsc.css
+++ b/wsc.css
@@ -386,14 +386,13 @@ textarea::-webkit-scrollbar-thumb {
 }
 #image{
   max-width:100%;
-  /*height:100%;*/
   max-height:50vh;
 }
 #video{
   display:none;
 }
 #modaleSC{
-  margin:10px auto !important;
+  margin:10px auto;
   max-width:50%;
   max-height:50vh;
   width:50%;
@@ -477,7 +476,7 @@ textarea::-webkit-scrollbar-thumb {
   min-width:100%;
   min-height:100%;
   margin:0;
-  margin:auto !important;
+  margin:auto;
 }
 .modal-full .modal-content {
   min-height:100vh;
