--- a/wsc.css
+++ b/wsc.css
@@ -393,10 +393,6 @@ textarea::-webkit-scrollbar-thumb {
 }
 #modaleSC{
   margin:10px auto;
-  max-width:50%;
-  max-height:50vh;
-  width:50%;
-  height:50vh;
 }
 #divkbytes{
   color:rgb(199, 199, 199);
@@ -424,16 +420,12 @@ textarea::-webkit-scrollbar-thumb {
 .slider.slider-horizontal {
   width: 150px;
 }
-#divResizeWindow, #divResizeCanvas, #divPurete, #divRefresh{
+#divResizeCanvas, #divPurete, #divRefresh{
   border-radius:10px;
   border:5px solid #f8f8f8cc;
   display:inline-block;
   padding:3px 10px;
   margin:0px;
-}
-#divResizeWindow{
-  border:0px;
-  padding:0px;
 }
 #sliderEmetteur > div > label{
   color :#646464;
@@ -447,7 +439,11 @@ textarea::-webkit-scrollbar-thumb {
   padding:15px 35px;
   color:#ffffff;
   border-radius: 3px;
-  margin:65px 0px;
+  margin:auto !important;
+  margin-top:40px !important;
+  margin-bottom:30px !important;
+  text-align:center;
+  display:block;
 }
 #bShare:hover{
   background-color:#dfc077;
@@ -497,20 +493,23 @@ textarea::-webkit-scrollbar-thumb {
   padding:0px !important;
 }
 @media screen and (max-width:768px) {
-  #bstart, #bstop, #bshareScreen{ margin-right:0px; }
+  #bstart, #bstop{ margin-right:0px; }
   #bshareScreen{ margin-right:5px; }
+  #name-div > div{ padding-bottom:10px; }
   #divAudio{
     margin-right:auto;
     display:inline;
-  }
-  #name-div > div{
-    padding-bottom:10px;
   }
   #modaleSC{
     width:100%;
     max-width:100%;
   }
 }
+@media screen and (max-width:325px) {
+  #divAudio{ padding-left:5px; }
+  #divPrev{ padding-right:5px; }
+}
+
 .live{
   margin-right:7px;
   border-radius:50%;
