--- a/wsc.css
+++ b/wsc.css
@@ -494,6 +494,7 @@ textarea::-webkit-scrollbar-thumb {
   color:#ffffff;
   padding:2px 4px;
   font-weight:700;
+  margin-right:10px;
   font-size:9px;
   border-radius:3px;
   background-color:#7b96bd;
