--- a/wsc.css
+++ b/wsc.css
@@ -365,7 +365,7 @@ textarea::-webkit-scrollbar-thumb {
   display:flex;
   justify-content:center;
   align-items:center;
-  padding-right:0px;
+  padding:0px;
 }
 #bmuteAudio{
   margin-left:15px;
@@ -499,12 +499,35 @@ textarea::-webkit-scrollbar-thumb {
   border-radius:3px;
   background-color:#7b96bd;
 }
+#heure{
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 162px;
+  background-color: #ffffff;
+  padding: 5px 13px;
+  opacity: 90%;
+  font-weight: 800;
+  text-align: center;
+  color: #666666;
+  display: flex;
+  align-items: center;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  box-shadow:0 7px 7px 0 #00000013;
+}
+.country{
+  text-transform:uppercase;
+  font-size:10px;
+  font-weight:700;
+}
 @media screen and (max-width:768px) {
   #bstart, #bstop{ margin-right:0px; }
   #bshareScreen{ margin-right:5px; }
   #name-div > div{ padding-bottom:10px; }
   #divAudio{
-    padding-left:0px !important;
+    padding-left:10px !important;
     margin-right:auto;
     display:inline;
   }
